--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -34,7 +34,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "滚蛋吧！！卡路里",
+    "navigationBarTitleText": "减肥小助手",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
